--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 
 magaf.addEventListener("click",()=>{
-confirm('&z')
+    confirm('Magasin choisi')
 mag_grid_show.style.display="none"
 main_div.style.display="block"
 choix_mag="AEROVILLE FEMME"
@@ -122,7 +122,7 @@ text_mag.textContent = choix_mag
 
 
 magah.addEventListener("click",()=>{
-    confirm('&z')
+    confirm('Magasin choisi')
     choix_mag="AEROVILLE HOMME"
     mag_grid_show.style.display="none"
 
@@ -135,7 +135,7 @@ magah.addEventListener("click",()=>{
 
 
 magokah.addEventListener("click",()=>{
-    confirm('&z')
+    confirm('Magasin choisi')
     choix_mag="OKABE HOMME"
     main_div.style.display="block"
     mag_grid_show.style.display="none"
@@ -144,7 +144,7 @@ magokah.addEventListener("click",()=>{
 })
 
 magokaf.addEventListener("click",()=>{
-    confirm('&z')
+    confirm('Magasin choisi')
     choix_mag="OKABE FEMME"
     mag_grid_show.style.display="none"
 
@@ -154,7 +154,7 @@ magokaf.addEventListener("click",()=>{
 })
 
 maguly.addEventListener("click",()=>{
-    confirm('&z')
+    confirm('Magasin choisi')
     main_div.style.display="block"
     mag_grid_show.style.display="none"
 
@@ -164,7 +164,7 @@ maguly.addEventListener("click",()=>{
 })
 
 magkrem.addEventListener("click",()=>{
-    confirm('&z')
+    confirm('Magasin choisi')
     choix_mag="KREMELIN"
     main_div.style.display="block"
     mag_grid_show.style.display="none"
