--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ welcome_message.innerHTML = "<li>Bonjour "+selectedValue+" "+document.querySelec
             }else{
 
 
-                confirm("erreur");
+                confirm("ERREUR:Vérifier votre adresse mail , numéro de téléphone , nom et prénom");
 
                 welcome_message.style.display="none"
 
